Segment writer service (#3498)
---------
