# api/openapiv2/gen/phlare.swagger.json
@@ -27,6 +27,9 @@
       "name": "QueryBackendService"
     },
     {
+      "name": "SegmentWriterService"
+    },
+    {
       "name": "SettingsService"
     },
     {
@@ -352,6 +355,46 @@
       "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
+    "pushv1PushResponse": {
+      "type": "object"
+    },
+    "pushv1RawProfileSeries": {
+      "type": "object",
+      "properties": {
+        "labels": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1LabelPair"
+          },
+          "title": "LabelPair is the key value pairs to identify the corresponding profile"
+        },
+        "samples": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pushv1RawSample"
+          },
+          "title": "samples are the set of profile bytes"
+        }
+      },
+      "title": "RawProfileSeries represents the pprof profile and its associated labels"
+    },
+    "pushv1RawSample": {
+      "type": "object",
+      "properties": {
+        "rawProfile": {
+          "type": "string",
+          "format": "byte",
+          "title": "raw_profile is the set of bytes of the pprof profile"
+        },
+        "ID": {
+          "type": "string",
+          "title": "unique ID of the profile"
+        }
+      },
+      "title": "RawSample is the set of bytes that correspond to a pprof profile"
+    },
     "querierv1ProfileTypesResponse": {
       "type": "object",
       "properties": {
@@ -394,6 +437,46 @@
           }
         }
       }
+    },
+    "segmentwriterv1PushResponse": {
+      "type": "object"
+    },
+    "segmentwriterv1RawProfileSeries": {
+      "type": "object",
+      "properties": {
+        "labels": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1LabelPair"
+          },
+          "title": "LabelPair is the key value pairs to identify the corresponding profile"
+        },
+        "sample": {
+          "$ref": "#/definitions/segmentwriterv1RawSample",
+          "title": "samples are the set of profile bytes"
+        },
+        "shard": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "RawProfileSeries represents the pprof profile and its associated labels"
+    },
+    "segmentwriterv1RawSample": {
+      "type": "object",
+      "properties": {
+        "rawProfile": {
+          "type": "string",
+          "format": "byte",
+          "title": "raw_profile is the set of bytes of the pprof profile"
+        },
+        "ID": {
+          "type": "string",
+          "title": "unique ID of the profile"
+        }
+      },
+      "title": "RawSample is the set of bytes that correspond to a pprof profile"
     },
     "typesv1Location": {
       "type": "object",
@@ -1395,9 +1478,6 @@
         }
       }
     },
-    "v1PushResponse": {
-      "type": "object"
-    },
     "v1Query": {
       "type": "object",
       "properties": {
@@ -1514,43 +1594,6 @@
         "QUERY_TREE"
       ],
       "default": "QUERY_UNSPECIFIED"
-    },
-    "v1RawProfileSeries": {
-      "type": "object",
-      "properties": {
-        "labels": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1LabelPair"
-          },
-          "title": "LabelPair is the key value pairs to identify the corresponding profile"
-        },
-        "samples": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "$ref": "#/definitions/v1RawSample"
-          },
-          "title": "samples are the set of profile bytes"
-        }
-      },
-      "title": "RawProfileSeries represents the pprof profile and its associated labels"
-    },
-    "v1RawSample": {
-      "type": "object",
-      "properties": {
-        "rawProfile": {
-          "type": "string",
-          "format": "byte",
-          "title": "raw_profile is the set of bytes of the pprof profile"
-        },
-        "ID": {
-          "type": "string",
-          "title": "unique ID of the profile"
-        }
-      },
-      "title": "RawSample is the set of bytes that correspond to a pprof profile"
     },
     "v1ReadIndexResponse": {
       "type": "object",
